# coordsystems

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  python-publish.yml
coordsystems/: __init__.py
src/: __init__.py
src/coordsystems/: __init__.py
tests/: test.py
