[project]
name = "coordsystems"
version = "0.0.1"
description = "A package for dealing with different coordinate reference system."
readme = "README.md"
authors = [{ name = "Heliton Martins", email = "helitonmrf@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dependencies = ["numpy>=1.20.1", "plum-dispatch"]
scripts = { "coordsystems" = "coordsystems.main:main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]